[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-asset-pipeline"
version = "1.0.0"
description = "AI-powered image categorization, metadata renaming, and indexing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "prestigepromedia1" },
]
keywords = ["image", "asset", "pipeline", "ai", "categorization", "rename", "index"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "anthropic",
    "Pillow",
]

[project.optional-dependencies]
drive = [
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
]
ocr = [
    "google-cloud-vision",
]

[project.scripts]
image-asset-pipeline = "image_asset_pipeline:main"

[project.urls]
Homepage = "https://github.com/prestigepromedia1/image-asset-pipeline"
